R2-F: lambdify two anonymous-class listeners + dedupe colour blend
AeroGroupBoxSkin.focusListener: anonymous InvalidationListener →
expression-bodied lambda using pattern-matched instanceof Parent.

AeroButtonSkin: 33-line anonymous ChangeListener<Number> in the focus
animation collapses to a 14-line lambda. The four 5-line per-stop colour
interpolations (12 redundant component blends) collapse to 4 calls to a
new private blend(Color a, Color b, double t) helper. Background
construction also drops the throwaway ArrayList round-trip in favour of
direct Background(f1, f2, bgFill).